--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
+    "@types/ramda": "^0.28.7",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "ramda": "^0.28.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-floating-action-button": "^1.0.5",
